--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -25,7 +25,7 @@ body{
 #actions{
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: baseline;
   justify-content: space-between;
   margin: 10px;
   flex-wrap: wrap;
@@ -66,4 +66,23 @@ body{
     display: flex;
     flex-direction: column;
   }
+}
+
+@media only screen and (max-width: 380px){
+
+  #actions{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 10px;
+    flex-wrap: wrap;
+  }
+
+  #searchInput{
+    padding: 6px;
+    font-size: 17px;
+    width: 90vw
+  }
+  
 }
